> 2.0.7 - New Item saving system (configurable - `new-item-mysql-saving` - item's are stored in Base64 format instead of very likely to corrupt - plain) - Version support for 1.20.6, 1.21.2, 1.21.3 and 1.21.4 (if you encounter any bug or error, please let us know!) - Reformatted code & optimized imports
Signed-off-by: petulikan1 <petulikan@gmail.com>

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -30,6 +30,9 @@ claimable-system: false
 # When player collects all items / money from this claimable system, should we give them the shop back?
 claimable-system-give_shop: false
 
+#Changes how Items are saved into database - human-unreadable format
+new-item-mysql-saving: false
+
 # When enabled, the blocks above shops will be cleared to avoid any display conflicts when shops are loaded in from the database.
 fix-above-blocks: true
 
